# wizagent

./: .gitignore  AGENTS.md  Makefile  README.md  env.dashscope  env.example  env.ollama  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled  release.yml  release.yml.disabled
cogents_wiz/: llm_adapter.py  web_surfer.py
cogents_wiz/bu/: __init__.py  config.py  logging_config.py
cogents_wiz/bu/agent/: gif.py  prompts.py  service.py  views.py
cogents_wiz/bu/browser/: __init__.py  events.py  profile.py  python_highlights.py  session.py  views.py  watchdog_base.py
cogents_wiz/bu/controller/: __init__.py
cogents_wiz/bu/dom/: enhanced_snapshot.py  service.py  views.py
cogents_wiz/bu/llm/: __init__.py  base.py  models.py
cogents_wiz/bu/mcp/: __init__.py  __main__.py  client.py  controller.py  server.py
cogents_wiz/bu/tokens/: service.py  views.py
cogents_wiz/bu/tools/: service.py
cogents_wiz/prompt/: README.md
cogents_wiz/prompt_template/: agent_episodic_memory.md  stock_price_query.md
deploy/searxng/: docker-compose.yml
examples/: hunyuan_bu.py  sogou_weixin_search.py  sougou_weixin.py  stock_price_csv.py  stock_price_excel.py  web_surfer_bing_search.py  web_surfer_demo.py  web_surfer_wikipedia_demo.py  wizsearch_demo.py
examples/agent/: deep_research_demo.py  oracle_stock.py  search_agent_demo.py  snowman_balance.py  visit_wikipedia.py  wizagent_search.py
examples/bu-examples/: simple.py
examples/bu-examples/browser/: parallel_browser.py  real_browser.py  using_cdp.py
examples/bu-examples/custom-functions/: 2fa.py  action_filters.py  advanced_search.py  cua.py  file_upload.py  notification.py  onepassword_2fa.py  save_to_file_hugging_face.py
examples/bu-examples/features/: custom_output.py  custom_system_prompt.py  download_file.py  follow_up_tasks.py  initial_actions.py  multi_tab.py  parallel_agents.py  process_agent_output.py  restrict_urls.py  scrolling_page.py  secure.py  sensitive_data.py  small_model_for_extraction.py
examples/bu-examples/file_system/: alphabet_earnings.py  excel_sheet.py  file_system.py
examples/bu-examples/getting_started/: 01_basic_search.py  02_form_filling.py  03_data_extraction.py  04_multi_step_task.py  05_fast_agent.py
examples/bu-examples/integrations/: gmail_2fa_integration.py
examples/bu-examples/mcp/: advanced_client.py  simple_client.py
examples/bu-examples/models/: aws.py  azure_openai.py  claude-4-sonnet.py  deepseek-chat.py  gemini.py  gpt-4.1.py  gpt-5-mini.py  lazy_import.py  llama4-groq.py  novita.py  openrouter.py
examples/bu-examples/ui/: command_line.py  gradio_demo.py  streamlit_demo.py
examples/bu-examples/use-cases/: captcha.py  check_appointment.py  extract_pdf_content.py  find_and_apply_to_jobs.py  find_influencer_profiles.py  shopping.py
examples/bu_examples/: simple.py
examples/bu_examples/browser/: parallel_browser.py  real_browser.py  using_cdp.py
examples/bu_examples/custom-functions/: 2fa.py  action_filters.py  advanced_search.py  cua.py  file_upload.py  notification.py  onepassword_2fa.py  save_to_file_hugging_face.py
examples/bu_examples/features/: custom_output.py  custom_system_prompt.py  download_file.py  follow_up_tasks.py  initial_actions.py  multi_tab.py  parallel_agents.py  process_agent_output.py  restrict_urls.py  scrolling_page.py  secure.py  sensitive_data.py  small_model_for_extraction.py
examples/bu_examples/file_system/: alphabet_earnings.py  excel_sheet.py  file_system.py
examples/bu_examples/getting_started/: 01_basic_search.py  02_form_filling.py  03_data_extraction.py  04_multi_step_task.py  05_fast_agent.py
examples/bu_examples/integrations/: gmail_2fa_integration.py
examples/bu_examples/mcp/: advanced_client.py  advanced_server.py  simple_client.py  simple_server.py
examples/bu_examples/models/: aws.py  azure_openai.py  claude-4-sonnet.py  deepseek-chat.py  gemini.py  gpt-4.1.py  gpt-5-mini.py  lazy_import.py  llama4-groq.py  novita.py  openrouter.py
examples/bu_examples/ui/: command_line.py  gradio_demo.py  streamlit_demo.py
examples/bu_examples/use-cases/: captcha.py  check_appointment.py  extract_pdf_content.py  find_and_apply_to_jobs.py  find_influencer_profiles.py  shopping.py
examples/gems/: snowman_gem.py
examples/memory_agent/: advanced_memory_agent.py  basic_memory_agent.py
examples/memory_agent/memu_store_example_storage/: memu_example_agent_example_user_mappings.json
examples/memory_store/: memu_memory_store_example.py
examples/memu_agent/: advanced_memory_agent.py  basic_memory_agent.py
examples/prompt_manager/: example_results.json  usage_examples.py
examples/search/: ddg_search_demo.py  searxng_search_demo.py  sougou_weixin.py  tarzi_search_demo.py  wizsearch_demo.py
examples/websurfer/: bing_search.py  web_surfer_demo.py  wikipedia_demo.py
playground/: crawl4ai_test.py  hunyuan_bu.py  hunyuan_model.py  sogou_weixin.py  sogou_weixin_search.py  stock_price_csv.py  web_surfer_bing_search.py
tests/: test_gem_parser.py  test_web_surfer.py
wiz-memory-store/: wizpage-stock-data.md
wizagent/: llm_adapter.py  stock_price_csv.py  web_surfer.py
wizagent/agent/: wizagent.py
wizagent/bu/: __init__.py  llm_adapter.py  logging_config.py
wizagent/bu/agent/: gif.py  prompts.py  service.py  views.py
wizagent/bu/browser/: __init__.py  events.py  profile.py  python_highlights.py  session.py  views.py  watchdog_base.py
wizagent/bu/controller/: __init__.py
wizagent/bu/dom/: enhanced_snapshot.py  service.py  views.py
wizagent/gems/: gem_parser.py  money_favors.py
wizagent/memory/: __init__.py  mem0_store.py  memu_store.py
wizagent/memu/: __init__.py
wizagent/prompt/: README.md  prompt.py
wizagent/prompt_template/: agent_episodic_memory.md
wizagent/search/: __init__.py  duckduckgo_search.py  google_genai_search.py  searxng_search.py  tavily_search.py  wizsearch.py
wizagent/semsearch/: docproc.py  semantic_search.py
wizagent/web_surfer/: base.py  web_surfer.py
wizagent/websurfer/: __init__.py  websurfer.py
wizagent/wizsearch/: __init__.py  wizsearch.py
wizbook/: wizpage-stock-data.md
(+147 files in other folders)
